# SLAM-test

./: CMakeLists.txt  README.md  package.xml  report.md  rviz.rviz
launch/: navigation.launch  world.launch
launch/include/: base_local_planner_params.yaml  costmap_common_params.yaml
scripts/: keyboard.py
src/: goals.cpp
urdf/: pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_wheel.xacro
